@@ -1,3 +1,10 @@
+2006-09-19  Hans Rakers <hans at parse dot nl>
+
+	* Get session config variables from local values instead of global
+	  values. This enables altering of session-related settings like
+	  gc_maxlifetime, entropy_file and entropy_length through ini_set().
+	  This fixes ticket #166
+
 2006-09-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Reverse changeset 205 (doc-comment exclusion) from Tom Regner 
